# tap-messagebird

./: .pre-commit-config.yaml  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release.yml
scripts/: generate_20_conversations.py
tap_messagebird/: __init__.py  client.py  streams.py  tap.py
tap_messagebird/schemas/: conversation_message.json
tap_messagebird/tests/: test_core.py
tests/: test_core.py
