[tool.poetry]
name = "tap-messagebird"
version = "0.0.0"
description = "`tap-messagebird` is a Singer tap for Messagebird, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Meltano Team <hello@meltano.com>"]
keywords = [
    "ELT",
    "Messagebird",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "~=2.25"
singer-sdk = { version="~=0.39.0"}
fs-s3fs = { version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "~=8.2"
responses = ">=0.23.3"
singer-sdk = { version="~=0.39.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[build-system]
requires = ["poetry-core==1.9", "poetry-dynamic-versioning==1.2"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-messagebird = 'tap_messagebird.tap:TapMessagebird.cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = ["ANN101", "PLR2004", "N818", "G004", "EM101", "COM812", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ANN", "D", "INP"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
